# voidaccess

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.fastapi  README.md  SECURITY.md  TECHNICAL_REFERENCE.md  build_fastapi_2.txt  cleanup_nuclear.sh  config.py  dbg.bat  dev-requirements.txt  docker-compose.yml  llm.py  pyproject.toml  pytest.ini  requirements.txt  scrape.py  setup.bat  setup.sh  start.bat  start.sh  stop.bat  stop.sh  verify_llm_wiring.py  verify_no_llm.py
.audit-output-182/: cobalt-strike-cve-malware-threat-actor-20260723-045109.json  lockbit-cobalt-strike-cve-ransomware-20260723-044829.json  lockbit-ransomware-20260723-043812.json  lockbit-ransomware-20260723-044135.json  ransomware-malware-cve-threat-actor-organization-20260723-044429.json
.github/workflows/: mirror.yml
.pytest-tmp/pytest-of-Katriel Delzyn Moses/: pytest-current
.pytest-tmp/pytest-of-Katriel Delzyn Moses/pytest-5/: test_cache_expirescurrent  test_cache_set_and_getcurrent  test_delete_keycurrent  test_resolve_empty_when_neithecurrent  test_resolve_server_fallbackcurrent  test_resolve_user_key优先current  test_user_api_key_unique_constcurrent  test_user_api_key_upsertcurrent  test_user_isolationcurrent
.pytest-tmp/pytest-of-Katriel Delzyn Moses/pytest-6/: test_cache_expirescurrent  test_cache_set_and_getcurrent  test_delete_keycurrent  test_resolve_empty_when_neithecurrent  test_resolve_server_fallbackcurrent  test_resolve_user_key优先current  test_user_api_key_unique_constcurrent  test_user_api_key_upsertcurrent  test_user_isolationcurrent
.pytest-tmp/pytest-of-Katriel Delzyn Moses/pytest-7/: test_cache_expirescurrent  test_cache_set_and_getcurrent  test_delete_keycurrent  test_resolve_empty_when_neithecurrent  test_resolve_server_fallbackcurrent  test_resolve_user_key优先current  test_user_api_key_unique_constcurrent  test_user_api_key_upsertcurrent  test_user_isolationcurrent
.test_venv/: pyvenv.cfg
.test_venv/Scripts/: activate  activate.bat
__verify_archive/: _cli_test_input.json  _verify_ioc_package.py  _verify_ioc_package_full.py  debug_alias.py  smoke_actor_profiles.py  verify_alias_step2.py  verify_alias_step2b.py  verify_alias_step3.py  verify_api_imports.py  verify_inv_imports.py  wipe_db.py
analysis/: opsec.py  patterns.py  temporal.py
api/: auth.py  errors.py  main.py
api/routes/: actors.py  admin.py  auth.py  entities.py  export.py  investigations.py  monitors.py  search.py  settings.py
auth/: README.md  token_blacklist.py
crawler/: spider.py
data/: domain_stopwords_en.txt  threat_gazetteer.json
db/: models.py  queries.py  search_engine_stats.py  session.py
db/migrations/versions/: 0002_add_missing_tables.py  0003_add_canonical_value_and_entity_links.py  0006_add_monitor_alerts.py  0007_add_actor_style_profiles.py  0008_add_users_table.py  0009_add_investigation_id_to_relationships.py  0010_add_composite_index_entity_relationships.py  (+5 more)
docker/: Dockerfile.fastapi  Dockerfile.fastapi.playwright  Dockerfile.nextjs  docker-compose.override.yml.example
docs/: BACKLOG.md  SCRAPINGANT_INTEGRATION_BRIEFING.md  SECURITY.md  architecture.md  ruff-triage.md  self-hosting.md
export/: _entity_loading.py  ioc_package.py  misp.py  relationships.py  sigma.py  snort_export.py  stix.py  yara_export.py
extractor/: README.md  __init__.py  confidence.py  entity_shape.py  gazetteer.py  identity.py  llm_extract.py  ner.py  normalizer.py  pipeline.py  regex_patterns.py  relationship_extract.py
fingerprint/: calibration.py  profiler.py  stylometry.py
graph/: __init__.py  builder.py  model.py
infra/: Dockerfile.fastapi  docker-compose.yml
monitor/: config.py  jobs.py  scheduler.py
scraper/: scrape.py  scrape_js.py
scripts/: README.md  check_health.sh  crop_logo.py  download_seed.py  evaluate_stylometry.py  health_check.py  import_seed.py  start.bat  start.sh  stop.bat  stop.sh  update_gazetteer.py
search/: __init__.py  circuit_breaker.py  engine_catalog.py  search.py
sources/: __init__.py  actor_profiles.py  blockchain.py  breach_lookup.py  cache.py  cisa.py  dns_enrichment.py  domain_reputation.py  email_reputation.py  engines.py  enrichment.py  hash_reputation.py  historical_intel.py  infostealer.py  nvd.py  paste_scraper.py  pastes.py  proxy_client.py  rss_scraper.py  seed_manager.py  telegram.py
sources/data/: __init__.py  onion_seeds.json
tests/: conftest.py  test_analysis_opsec.py  test_analysis_temporal.py  test_api.py  test_breach_lookup.py  test_cli_proxy_config.py  test_confidence_calibration.py  test_config.py  test_consolidated_contracts.py  test_db.py  test_dns_enrichment.py  test_domain_reputation.py  test_email_reputation.py  test_extractor_llm_pipeline.py  test_filter_e2e_manual.py  test_filter_parser_manual.py  test_github_scraper.py  test_gitlab_scraper.py  test_graph.py  test_graph_integration.py  test_hash_reputation.py  test_infostealer.py  test_ip_reputation.py  test_llm.py  test_llm_utils.py  test_monitor.py  test_monitor_integration.py  test_nvd.py  test_pagination.py  test_paste_scraper.py  test_proxy_client.py  test_ransomlook.py  test_regex_patterns.py  test_relationship_extract.py  test_rss_scraper.py  test_scrape_js.py  test_settings.py  test_setup.sh  test_snort_export.py  test_stix_export.py  (+2 more)
utils/: content_dedup.py  content_safety.py  enrichment_cache.py  investigation_metrics.py  ioc_freshness.py
vector/: __init__.py  embedder.py  model_singleton.py  store.py
voidaccess/: config.py  llm.py  llm_utils.py
voidaccess_cli/: __init__.py  browser.py  config.py  display.py  main.py  tor_detect.py
voidaccess_cli/adapters/: sqlite.py
voidaccess_cli/commands/: configure.py  enrich.py  export.py  investigate.py  show.py
web/: middleware.test.ts  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: DarkWebScene.tsx  EntitySidebar.tsx  GraphVisualization.tsx  InvestigationInput.tsx  InvestigationLoadingScreen.tsx  InvestigationSummary.tsx  ModelSelector.tsx  NodeDetailPanel.tsx  SourcesPanel.tsx  StylometryPanel.tsx  TopoBackground.tsx
(+25 files in other folders)
