[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voidaccess"
version = "1.7.0"
description = "Dark web OSINT CLI — automated threat intelligence from query to report"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VoidAccess" }]
keywords = ["osint", "darkweb", "threat-intelligence", "tor", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",
    "click>=8.0",
    "fastapi>=0.115",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pillow>=10.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "filelock>=3.14",
    "numpy>=1.26",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-google-genai>=1.0",
    "langchain-groq>=0.1",
    "langchain-ollama>=0.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "spacy>=3.7",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "networkx>=3.0",
    "pydantic>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "pyyaml>=6.0",
    "openai>=1.30",
    "cryptography>=42.0",
    "python-dateutil>=2.9",
    "langdetect>=1.0",
    "pyvis>=0.3",
    "urllib3>=2.2",
    "trafilatura>=1.6",
    "requests>=2.31",
    "python-socks>=2.4",
    "tldextract>=5.1",
    "stix2>=3.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
nlp = [
    "sentence-transformers>=3.0",
    "torch>=2.3",
    "transformers>=4.42",
]
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "torch>=2.3",
]
telegram = ["telethon>=1.36"]
js = ["playwright>=1.45"]
# Convenience: all optional packages at once
all = [
    "chromadb>=0.5",
    "playwright>=1.45",
    "sentence-transformers>=3.0",
    "telethon>=1.36",
    "torch>=2.3",
    "transformers>=4.42",
]

[project.scripts]
voidaccess = "voidaccess_cli.main:app"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "voidaccess_cli*",
    "db*",
    "sources*",
    "sources.data*",
    "extractor*",
    "scraper*",
    "search*",
    "utils*",
    "export*",
    "analysis*",
    "fingerprint*",
    "graph*",
    "i18n*",
    "vector*",
    "monitor*",
    "crawler*",
    "auth*",
    "voidaccess*",
    "api*",
]
exclude = [
    "tests*",
    "web*",
    "va_final_qa*",
    "infra*",
    "chroma_db*",
    "cti_data*",
    "docs*",
    "scripts*",
    "public*",
    "__pycache__*",
]

# v1.6.3 — ship data/onion_seeds.json inside the installed package.
# Without this entry, ``pip install voidaccess`` produces a package
# directory that does NOT contain the curated seed list — every
# CLI investigation silently gets zero seed injection, which is the
# exact regression reported in v1.6.2 (every installed CLI logged
# ``Seed file not found: .../site-packages/data/onion_seeds.json``).
#
# ``sources.data`` is declared as a sub-package above (its only file
# is onion_seeds.json; __init__.py is empty) so importlib.resources
# can locate it after pip install via
# ``files('sources').joinpath('data', 'onion_seeds.json')``.  The
# package-data entry below tells setuptools to ship the JSON inside
# that sub-package directory.
[tool.setuptools.package-data]
"sources" = ["data/onion_seeds.json"]
"sources.data" = ["onion_seeds.json"]
